# AirlineTicketSales

./: .gitattributes  CMakeLists.txt  README.md  check_num.h  core.cpp  core.h  main.cpp  menues.cpp  menues.h
appearance/: colors.cpp  colors.h  menues.cpp  menues.h  width.cpp  width.h
data/: airplane.cpp  airplane.h  data.cpp  data.h  date.cpp  date.h  flight.cpp  flight.h  reader.cpp  reader.h  ticket_purchase.cpp  ticket_purchase.h  tickets.cpp  tickets.h  validation_data.cpp  validation_data.h
password/: password.cpp  password.h  sha256.cpp
reader/: reader.cpp  reader.h
user/: admin.cpp  admin.h  standard_user.cpp  standard_user.h  user.cpp  user.h  validation_user.cpp
user_accounts/: admin_functional.cpp  admin_functional.h  user.cpp  user.h
